--- a/.github/workflows/lint_code_base.yml
+++ b/.github/workflows/lint_code_base.yml
@@ -19,6 +19,6 @@ jobs:
         env:
           DEFAULT_BRANCH: main
           LINTER_RULES_PATH: /
-          JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.json
+          JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.js
           VALIDATE_JAVASCRIPT_ES: true
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
