--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
   },
   "extends": [
     "plugin:react/recommended",
+    "plugin:react-hooks",
     "plugin:@typescript-eslint/recommended",
     "plugin:react-hooks/recommended",
     "prettier/@typescript-eslint",
